--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,3 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+
+<h1>Ornek Uygulama</h1>
+<p>Burasi Ornek uygulamamizin Ana Sayfasi'dir'</p>
