--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
 
 <h1>Ornek Uygulama</h1>
 <p>Burasi Ornek uygulamamizin Ana Sayfasi'dir'</p>
-<%= link_to "Sign up now!", '#', :class => "signup_button round" %>
+<%= link_to "Sign up now!", signup_path, :class => "signup_button round" %>
