--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,21 @@
+<% if signed_in? %>
 
+	<table class="front" summary="For signed-in users">
+		<tr>
+			<td class="main">
+				<h1 class "micropost"> What's Up?</h1>
+				<%= render 'shared/micropost_form' %>
+			</td>
+			<td class="sidebar round">
+				<%= render 'shared/user_info' %>
+			</td>
+		</tr>
+	</table>
+
+<% else %>
+  
 <h1>Ornek Uygulama</h1>
 <p>Burasi Ornek uygulamamizin Ana Sayfasi'dir'</p>
 <%= link_to "Sign up now!", signup_path, :class => "signup_button round" %>
+
+<% end %>
